--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -5,7 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Views\Databases\" />
+    <Compile Remove="Views\Databases\**" />
+    <Content Remove="Views\Databases\**" />
+    <EmbeddedResource Remove="Views\Databases\**" />
+    <None Remove="Views\Databases\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\Image\" />
   </ItemGroup>
 
